src/app.css
/* ... */
.playfair-display-regular {
  font-family: "Playfair Display", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.playfair-display-medium {
  font-family: "Playfair Display", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.playfair-display-semibold {
  font-family: "Playfair Display", sans-serif;
  font-weight: 600;
  font-style: normal;
}

.playfair-display-bold {
  font-family: "Playfair Display", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.playfair-display-extrabold {
  font-family: "PlayfairDisplay", sans-serif;
  font-weight: 800;
  font-style: normal;
}

.playfair-display-black {
  font-family: "PlayfairDisplay", sans-serif;
  font-weight: 900;
  font-style: normal;
}

.playfair-display-regular-italic {
  font-family: "Playfair Display", sans-serif;
  font-weight: 400;
  font-style: italic;
}

.playfair-display-medium-italic {
  font-family: "Playfair Display", sans-serif;
  font-weight: 500;
  font-style: italic;
}

.playfair-display-semibold-italic {
  font-family: "Playfair Display", sans-serif;
  font-weight: 600;
  font-style: italic;
}

.playfair-display-bold-italic {
  font-family: "Playfair Display", sans-serif;
  font-weight: 700;
  font-style: italic;
}

.playfair-display-extrabold-italic {
  font-family: "Playfair Display", sans-serif;
  font-weight: 800;
  font-style: italic;
}

.playfair-display-black-italic {
  font-family: "Playfair Display", sans-serif;
  font-weight: 900;
  font-style: italic;
}

.merriweather-light {
  font-family: "Merriweather", sans-serif;
  font-weight: 300;
  font-style: normal;
}

.merriweather-regular {
  font-family: "Merriweather", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.merriweather-medium {
  font-family: "Merriweather", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.merriweather-semibold {
  font-family: "Merriweather", sans-serif;
  font-weight: 600;
  font-style: normal;
}

.merriweather-bold {
  font-family: "Merriweather", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.merriweather-extrabold {
  font-family: "Merriweather", sans-serif;
  font-weight: 800;
  font-style: normal;
}

.merriweather-black {
  font-family: "Merriweather", sans-serif;
  font-weight: 900;
  font-style: normal;
}

.width-restriction {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.styled-buttons {
  background-color: #00573E;
  color:#F2F2F2;
  border: 2px solid #00573E;
  padding: 10px 20px 10px 20px;
  font-size: 24px;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease; 
}

.styled-buttons[aria-current="true"] {
  background-color: #023a2a;
  color:#F2F2F2;
  border: 2px solid #EDAE1A;
  padding: 10px 20px 10px 20px;
  font-size: 24px;
  border-radius: 5px;
  cursor: pointer;
  transition-property: background-color, border;
  transition-duration: 0.3s;
}

.header {
  color:#F2F2F2;
  font-size: 48px;
}

.p-paragraph{
  @apply font-display
}

